--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,18 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
@@ -62,4 +76,7 @@ dependencies {
 
     //Mockito
     testCompile "org.mockito:mockito-core:1.10.19"
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+        transitive = true;
+    }
 }
