--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
 
     <application
         android:name=".MobSoftApplication"
@@ -24,6 +27,10 @@
         </activity>
         <activity android:name=".ui.game.GameActivity" />
         <activity android:name=".ui.highscore.HighscoreActivity" />
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="b2fd88bec81e8b4ca1de6a99b03b830a6a5eb5c5" />
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
