--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.0.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
     compile 'com.google.code.gson:gson:2.7'
+    compile 'com.google.android.gms:play-services-analytics:10.2.4'
+
 
     //JVM Test
     //JUnit
@@ -79,4 +81,6 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true;
     }
+    apply plugin: 'com.google.gms.google-services'
+
 }
